[package]
name = "mgpp"
version = "0.0.0"
authors = ["itchyny <itchyny@hatena.ne.jp>"]
description = "Mackerel graph pretty printer"
repository = "https://github.com/itchyny/mgpp"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]

[dependencies]
pest = "^1.0.0-beta"
pest_derive = "^1.0.0-beta"
