[package]
name = "mmpp"
version = "0.0.0"
authors = ["itchyny <itchyny@hatena.ne.jp>"]
description = "Mackerel metric pretty printer"
repository = "https://github.com/itchyny/mmpp"
readme = "README.md"
license = "MIT"
keywords = ["cli", "mackerel"]

[dependencies]
pest = "^1.0.0-beta"
pest_derive = "^1.0.0-beta"
